<resources>
    <string name="app_name">pharmacy</string>
    <string name="account_text">You don`t have an account?</string>
    <string name="email_sing_in">Enter your email</string>
    <string name="password_sing_in">Enter your password</string>
    <string name="btn_sing_in">Sign in</string>
    <string name="sign_up_text_btn">Sign up</string>
    <string name="appbarText">Pharmacy</string>
    <string name="photo">Pharmacy</string>
    <string name="hello_world">Hello, World!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--    ////////////////////////////////////////////////////////////  -->

    <string name="second_appBar_text">Pharmacy</string>
    <string name="register_text">Register</string>
    <string name="register_line">ــــــــــــــــــــــــ</string>
    <string name="userName">User name</string>
    <string name="rePassword">Confirm password</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="med">Med</string>

</resources>