<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-1dp"
        tools:ignore="VisualLintBounds" />


    <TextView
        android:id="@+id/appBar_text"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center|start"
        android:text="@string/appbarText"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/email_sign_in"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="416dp"
        android:autofillHints="Email"
        android:background="@drawable/custom_border"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/email_sing_in"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:soundEffectsEnabled="true"
        android:textColor="@color/design_default_color_background"
        android:textColorHint="#B8ADAD"
        android:textSize="17sp"
        app:circularflow_radiusInDP="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="488dp"
        android:autofillHints="@string/password_sing_in"
        android:background="@drawable/custom_border"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/password_sing_in"
        android:inputType="textPassword"

        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:textColor="@color/design_default_color_background"
        android:textColorHint="#B8ADAD"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/btn_sing_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.256" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="192dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/photo"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/doctors_pana" />

    <TextView
        android:id="@+id/sign_in_text_btn"
        android:layout_width="171dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:includeFontPadding="true"
        android:text="@string/account_text"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/sign_in_text_btn1"
        android:layout_width="56dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:includeFontPadding="true"
        android:text="@string/sign_up_text_btn"
        android:textAlignment="viewStart"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>