<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".RegisterScreen"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="68dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-1dp"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/second_text_appBar"
        android:layout_width="157dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/second_appBar_text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/email_sign_up"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:autofillHints="Email"
        android:background="@drawable/custom_border"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/email_sing_in"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:soundEffectsEnabled="true"
        android:textColor="@color/design_default_color_background"
        android:textColorHint="#B8ADAD"
        android:textSize="17sp"
        app:circularflow_radiusInDP="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />

    <EditText
        android:id="@+id/rePassword_sign_up"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="148dp"
        android:autofillHints="SignUp"
        android:background="@drawable/custom_border"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/rePassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:soundEffectsEnabled="true"
        android:textColor="@color/design_default_color_background"
        android:textColorHint="#B8ADAD"
        android:textSize="17sp"
        app:circularflow_radiusInDP="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <EditText
        android:id="@+id/password_sign_up"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="148dp"
        android:autofillHints="SignUp"
        android:background="@drawable/custom_border"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/password_sing_in"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:soundEffectsEnabled="true"
        android:textColor="@color/design_default_color_background"
        android:textColorHint="#B8ADAD"
        android:textSize="17sp"
        app:circularflow_radiusInDP="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <EditText
        android:id="@+id/username_sign_up"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="148dp"
        android:autofillHints="SignUp"
        android:background="@drawable/custom_border"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/userName"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:soundEffectsEnabled="true"
        android:textColor="@color/design_default_color_background"
        android:textColorHint="#B8ADAD"
        android:textSize="17sp"
        app:circularflow_radiusInDP="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/btn_sign_up"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="89dp"
        android:layout_height="42dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/register_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <TextView
        android:id="@+id/register_text1"
        android:layout_width="116dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="@string/register_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/register_text2"
        android:layout_width="116dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="@string/register_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />


</androidx.constraintlayout.widget.ConstraintLayout>